samples/_failures_safe/1761040583_4fae1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_445f3ce3.c: In function ‘main’:
./samples/SAFE/__tmp_445f3ce3.c:147:9: error: expected declaration or statement at end of input
  147 |         switch (choice) {
      |         ^~~~~~
./samples/SAFE/__tmp_445f3ce3.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_445f3ce3.c:147:9: error: expected declaration or statement at end of input
